deploy/overlays/dev/patches.yaml
apiVersion: v1
kind: Service
metadata:
  name: kratos-login
  annotations:
    cloud.google.com/backend-config: '{"default":"fe-login-dev"}'
